--- a/.github/workflows/colab_badge_workflow.yml
+++ b/.github/workflows/colab_badge_workflow.yml
@@ -9,14 +9,15 @@ jobs:
         uses: actions/checkout@v2
       - name: Add/Update badges
         id: badges
-        uses: trsvchn/colab-badge-action@v3
+        uses: trsvchn/colab-badge-action@v2
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           check: 'all'
           update: true
           target_branch: main
           target_repository: mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1
       - name: Commit changes
-        uses: EndBug/add-and-commit@v7
+        uses: EndBug/add-and-commit@v9
         with:
           author_name: ${{ github.repository_owner }}
           author_email: mentzerhussein@gmail.com
